packages/typ/tests/fixtures/diagnostics/0047_core_pattern_annotation_mismatch_04.ml.infer.expected
File "0047_core_pattern_annotation_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0047_core_pattern_annotation_mismatch_04 is not a valid module name.

File "0047_core_pattern_annotation_mismatch_04.ml", line 1, characters 37-38:
1 | let ((delta : bool), other_delta) = (3, 4)
                                         ^
Error: The constant 3 has type int but an expression was expected of type
         bool
