packages/typ/tests/fixtures/diagnostics/0047_core_pattern_annotation_mismatch_04.ml
let ((delta : bool), other_delta) = (3, 4)
